Translate the remaining strings to Chinese

--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -37,4 +37,43 @@
     <system:String x:Key="Push">Git Push</system:String>
     <system:String x:Key="Checkout">Branch wechseln</system:String>
     <system:String x:Key="Ignore">Ignorieren</system:String>
+    <system:String x:Key="Help Detail" xml:space="preserve">
+        RepoZ is showing all git repositories found on local drives. Each repository is listed with a status string which could look like this:
+
+        master  {0}   +1   ~2   -3   |   +4   ~5   -6   {1}7
+
+
+        master
+        ... represents the current branch or the SHA of a detached HEAD.
+
+        {2}
+        ... represents the branch status in relation to its remote (tracked origin) branch.
+        In this case, the local branch is at the same commit level as the remote branch.
+
+        {3}
+        &lt;num&gt;
+            ... indicates that the local branch is ahead of the remote branch by the specified number of commits; a 'git push' is required to update the remote branch.
+
+            {4}
+        &lt;num&gt;
+                ... indicates that the local branch is behind the remote branch by the specified number of commits; a 'git pull' is required to update the local branch.
+
+                {5}
+                ... indicates that the local branch has no upstream branch. 'git push' needs to be called with '--set-upstream' to push changes to a remote branch.
+
+
+                The following numbers represent added (+1), modified (~2) and removed files (-3) from the index.
+                The numbers after the pipe sign represent added (+4), modified (~5) and removed files (-6) on the working directory.
+
+                {6}
+        &lt;num&gt;
+                    ... indicates that there are stashed changes available.
+
+
+                    Please note:
+                    This information reflects the state of the remote tracked branch after the last ""git fetch"".
+                    You can enable Auto fetch in the RepoZ menu to keep the information up to date.
+
+                    Note that the status might be shorter if possible to improve readablility.
+    </system:String>
 </ResourceDictionary>
