--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -2,78 +2,77 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RepoZ.App.Win.i18n"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
-    <system:String x:Key="Search">🔍 Suche</system:String>
-    <system:String x:Key="EmptyHint">Hier gibt es noch keine Repositories 😐
-        
-        Navigiere zu einem Git Repository und wechsle den aktuellen Branch oder ändere eine Datei, um es hier erscheinen zu lassen.
-        
-        Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories durchsucht werden.</system:String>
-    <system:String x:Key="Help">✋ Hilfe</system:String>
-    <system:String x:Key="Donate">☕ Einen Kaffee spendieren</system:String>
-    <system:String x:Key="Follow">🐤 @Waescher auf Twitter folgen</system:String>
-    <system:String x:Key="Star">🌟 RepoZ auf GitHub folgen</system:String>
-    <system:String x:Key="PingBack">💙 Etwas zurückgeben</system:String>
-    <system:String x:Key="Aggresive">😈 Aggresiv</system:String>
-    <system:String x:Key="Adequate">😅 Adäquat</system:String>
-    <system:String x:Key="Discretely">😇 Diskret</system:String>
-    <system:String x:Key="Off">💤 Aus</system:String>
-    <system:String x:Key="AutoFetch">🕒 Auto-Fetch</system:String>
-    <system:String x:Key="ResetIgnoreRules">⛔ Ignore-Regeln zurücksetzen</system:String>
-    <system:String x:Key="Clear">🗑️ Liste leeren</system:String>
-    <system:String x:Key="ScanComputer">⚡ Computer durchsuchen</system:String>
-    <system:String x:Key="ManageRepos">🛠️ Repositories verwalten</system:String>
-    <system:String x:Key="GotIt">Verstanden.</system:String>
-    <system:String x:Key="Open">Öffnen</system:String>
-    <system:String x:Key="StartWithWindows">Mit Windows starten</system:String>
-    <system:String x:Key="Exit">Beenden</system:String>
-    <system:String x:Key="NotStartWithWindows">Nicht mehr mit Windows starten</system:String>
-    <system:String x:Key="Scanning">⚡ Suche nach Repositories ...</system:String>
-    <system:String x:Key="Open in Windows File Explorer">In Windows Explorer öffnen</system:String>
-    <system:String x:Key="Open in Windows PowerShell">In Windows Powershell öffnen</system:String>
-    <system:String x:Key="Open in Windows Command Prompt">In Windows Eingabeaufforderung öffnen</system:String>
-    <system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
-    <system:String x:Key="Fetch">Git Fetch</system:String>
-    <system:String x:Key="Pull">Git Pull</system:String>
-    <system:String x:Key="Push">Git Push</system:String>
-    <system:String x:Key="Checkout">Branch wechseln</system:String>
-    <system:String x:Key="Ignore">Ignorieren</system:String>
-    <system:String x:Key="Help Detail" xml:space="preserve">
-        RepoZ is showing all git repositories found on local drives. Each repository is listed with a status string which could look like this:
+	<system:String x:Key="Search">🔍 Suche</system:String>
+	<system:String x:Key="EmptyHint" xml:space="preserve">Hier gibt es noch keine Repositories 😐
 
-        master  {0}   +1   ~2   -3   |   +4   ~5   -6   {1}7
+Navigiere zu einem Git Repository und wechsle den aktuellen Branch oder ändere eine Datei, um es hier erscheinen zu lassen.
 
+Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories durchsucht werden.</system:String>
+	<system:String x:Key="Help">✋ Hilfe</system:String>
+	<system:String x:Key="Donate">☕ Einen Kaffee spendieren</system:String>
+	<system:String x:Key="Follow">🐤 @Waescher auf Twitter folgen</system:String>
+	<system:String x:Key="Star">🌟 RepoZ auf GitHub folgen</system:String>
+	<system:String x:Key="PingBack">💙 Etwas zurückgeben</system:String>
+	<system:String x:Key="Aggresive">😈 Aggresiv</system:String>
+	<system:String x:Key="Adequate">😅 Adäquat</system:String>
+	<system:String x:Key="Discretely">😇 Diskret</system:String>
+	<system:String x:Key="Off">💤 Aus</system:String>
+	<system:String x:Key="AutoFetch">🕒 Auto-Fetch</system:String>
+	<system:String x:Key="ResetIgnoreRules">⛔ Ignore-Regeln zurücksetzen</system:String>
+	<system:String x:Key="Clear">🗑️ Liste leeren</system:String>
+	<system:String x:Key="ScanComputer">⚡ Computer durchsuchen</system:String>
+	<system:String x:Key="ManageRepos">🛠️ Repositories verwalten</system:String>
+	<system:String x:Key="GotIt">Verstanden.</system:String>
+	<system:String x:Key="Open">Öffnen</system:String>
+	<system:String x:Key="StartWithWindows">Mit Windows starten</system:String>
+	<system:String x:Key="Exit">Beenden</system:String>
+	<system:String x:Key="NotStartWithWindows">Nicht mehr mit Windows starten</system:String>
+	<system:String x:Key="Scanning">⚡ Suche nach Repositories ...</system:String>
+	<system:String x:Key="Open in Windows File Explorer">In Windows Explorer öffnen</system:String>
+	<system:String x:Key="Open in Windows PowerShell">In Windows Powershell öffnen</system:String>
+	<system:String x:Key="Open in Windows Command Prompt">In Windows Eingabeaufforderung öffnen</system:String>
+	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
+	<system:String x:Key="Fetch">Git Fetch</system:String>
+	<system:String x:Key="Pull">Git Pull</system:String>
+	<system:String x:Key="Push">Git Push</system:String>
+	<system:String x:Key="Checkout">Branch wechseln</system:String>
+	<system:String x:Key="Ignore">Ignorieren</system:String>
+	<system:String x:Key="Help Detail" xml:space="preserve">
+RepoZ is showing all git repositories found on local drives. Each repository is listed with a status string which could look like this:
+RepoZ zeigt alle Repositories an, die auf lokalen Laufwerken gefunden wurden. Jedes Repository wird mit einem Status aufgeführt, der z.B. so aussehen kann:
 
-        master
-        ... represents the current branch or the SHA of a detached HEAD.
-
-        {2}
-        ... represents the branch status in relation to its remote (tracked origin) branch.
-        In this case, the local branch is at the same commit level as the remote branch.
-
-        {3}
-        &lt;num&gt;
-            ... indicates that the local branch is ahead of the remote branch by the specified number of commits; a 'git push' is required to update the remote branch.
-
-            {4}
-        &lt;num&gt;
-                ... indicates that the local branch is behind the remote branch by the specified number of commits; a 'git pull' is required to update the local branch.
-
-                {5}
-                ... indicates that the local branch has no upstream branch. 'git push' needs to be called with '--set-upstream' to push changes to a remote branch.
+master  {0}   +1   ~2   -3   |   +4   ~5   -6   {1}7
 
 
-                The following numbers represent added (+1), modified (~2) and removed files (-3) from the index.
-                The numbers after the pipe sign represent added (+4), modified (~5) and removed files (-6) on the working directory.
+master
+... represents the current branch or the SHA of a detached HEAD.
+... steht für den aktuellen Branch oder den Hash-Wert eines sogenannten "detached HEAD".
 
-                {6}
-        &lt;num&gt;
-                    ... indicates that there are stashed changes available.
+{2}
+... steht für den aktuellen Branch-Status im Vergleich zu seinem Remote-Branch
+In diesem Beispiel ist der lokale Branch gleichauf mit seinem Remote-Branch.
+
+{3}&lt;num&gt;
+... zeigt an, dass der lokale Branch seinem Remote-Branch über die entsprechende Anzahl der Commits voraus ist. Es wird "git push" benötigt, um den Remote-Branch zu aktualisieren.
+
+{4}&lt;num&gt;
+... zeigt an, dass der lokale Branch um die entsprechende Anzahl der Commits hinter den Remote-Branch zurückgefallen ist. Ein "git pull" wird benötigt, um den lokalen Branch zu aktualisieren.
+
+{5}
+... zeigt an, dass der lokale Branch keinen Remote-Branch hat. "git push" muss mit "--set-upstream" aufgerufen werden um Änderungen an einen neuen Remote-Branch übertragen zu können.
 
 
-                    Please note:
-                    This information reflects the state of the remote tracked branch after the last ""git fetch"".
-                    You can enable Auto fetch in the RepoZ menu to keep the information up to date.
+Die folgenden Nummern stehen für hinzugefügte (+1), geänderte (~2) und gelöschte Dateien (-3) im Git-Index (Änderungen, die "gestaged" wurden).
+Die Nummern nach dem Pipe-Symbol stehen für hinzugefügte (+4), geänderte (~5) und gelöschte Dateien (-6) im Arbeitsverzeichnis.
 
-                    Note that the status might be shorter if possible to improve readablility.
-    </system:String>
+{6}&lt;num&gt;
+... zeigt an, dass Änderungen in Stashes vorhanden sind.
+
+
+Hinweis:
+Diese Informationen zeigen den Zustand des Remote-Branches seit dem letzten "git fetch" an.
+Durch Aktivieren von Auto-Fetch, kann RepoZ diese Information selbstständig automatisch aktualisieren.
+
+Wenn möglich wird der Status kürzer dargestellt, um die Lesbarkeit zu verbessern.
+</system:String>
 </ResourceDictionary>
