Translate mac repository actions

--- a/RepoZ.App.Win/i18n/de-DE.xaml
+++ b/RepoZ.App.Win/i18n/de-DE.xaml
@@ -11,7 +11,7 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="Help">Hilfe</system:String>
 	<system:String x:Key="Donate">Einen Kaffee spendieren</system:String>
 	<system:String x:Key="Follow">@Waescher auf Twitter folgen</system:String>
-	<system:String x:Key="Star">RepoZ auf GitHub folgen</system:String>
+	<system:String x:Key="Star">Einen GitHub-Stern schenken</system:String>
 	<system:String x:Key="PingBack">Danke sagen ♥︎</system:String>
 	<system:String x:Key="Aggresive">Aggresiv</system:String>
 	<system:String x:Key="Adequate">Adäquat</system:String>
@@ -28,11 +28,13 @@ Alternativ, kann der Computer auch über das Menü oben rechts nach Repositories
 	<system:String x:Key="StartWithWindows">Mit Windows starten</system:String>
 	<system:String x:Key="Exit">Beenden</system:String>
 	<system:String x:Key="NotStartWithWindows">Nicht mehr mit Windows starten</system:String>
-	<system:String x:Key="Scanning">⚡ Suche nach Repositories ...</system:String>
+	<system:String x:Key="Scanning">Suche nach Repositories ...</system:String>
 	<system:String x:Key="Open in Windows File Explorer">In Windows Explorer öffnen</system:String>
 	<system:String x:Key="Open in Windows PowerShell">In Windows Powershell öffnen</system:String>
 	<system:String x:Key="Open in Windows Command Prompt">In Windows Eingabeaufforderung öffnen</system:String>
 	<system:String x:Key="Open in Git Bash">In Git Bash öffnen</system:String>
+	<system:String x:Key="Open in Finder">In Finder öffnen</system:String>
+	<system:String x:Key="Open in Terminal">Im Terminal öffnen</system:String>
 	<system:String x:Key="Fetch">Git Fetch</system:String>
 	<system:String x:Key="Pull">Git Pull</system:String>
 	<system:String x:Key="Push">Git Push</system:String>
