--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -21,8 +21,8 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="AutoFetch">Auto fetch</system:String>
 	<system:String x:Key="ResetIgnoreRules">Reset ignore rules</system:String>
 	<system:String x:Key="Clear">Clear</system:String>
-	<system:String x:Key="ScanComputer">⚡ Scan computer</system:String>
-	<system:String x:Key="ScanMac">⚡ Scan mac</system:String>
+	<system:String x:Key="ScanComputer">Scan computer</system:String>
+	<system:String x:Key="ScanMac">Scan mac</system:String>
 	<system:String x:Key="ManageRepos">Manage repositories</system:String>
 	<system:String x:Key="GotIt">Got it</system:String>
 	<system:String x:Key="Open">Open</system:String>
@@ -30,7 +30,7 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Exit">Exit</system:String>
 	<system:String x:Key="NotStartWithWindows">Do not start with Windows</system:String>
 	<system:String x:Key="Scanning">Scanning ...</system:String>
-	<system:String x:Key="Open in Windows File Explorer">Open In Windows File Explorer"</system:String>
+	<system:String x:Key="Open in Windows File Explorer">Open In Windows File Explorer</system:String>
 	<system:String x:Key="Open in Windows PowerShell">Open In Windows PowerShell</system:String>
 	<system:String x:Key="Open in Windows Command Prompt">Open In Windows Command Prompt</system:String>
 	<system:String x:Key="Open in Git Bash">Open In Git Bash</system:String>
