--- a/RepoZ.App.Win/i18n/en-us.xaml
+++ b/RepoZ.App.Win/i18n/en-us.xaml
@@ -13,7 +13,7 @@ Alternatively, you can scan your computer manually for repositories in the setti
 	<system:String x:Key="Donate">Buy me a coffee</system:String>
 	<system:String x:Key="Follow">Follow @Waescher</system:String>
 	<system:String x:Key="Star">Star RepoZ on GitHub</system:String>
-	<system:String x:Key="PingBack">Ping back</system:String>
+	<system:String x:Key="PingBack">Ping back ♥︎</system:String>
 	<system:String x:Key="Aggresive">Aggresive</system:String>
 	<system:String x:Key="Adequate">Adequate</system:String>
 	<system:String x:Key="Discretely">Discretely</system:String>
