--- a/RepoZ.App.Win/i18n/zh-cn.xaml
+++ b/RepoZ.App.Win/i18n/zh-cn.xaml
@@ -2,46 +2,46 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RepoZ.App.Win.i18n"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
-	<system:String x:Key="Search">🔍 搜索</system:String>
-	<system:String x:Key="EmptyHint" xml:space="preserve">还没有任何仓库记录😐
+    <system:String x:Key="Search">搜索</system:String>
+    <system:String x:Key="EmptyHint" xml:space="preserve">还没有任何仓库记录😐
 		
 在计算机上的任何仓库中切换分支以使其显示在此处。
 		
 或者，您可以手动扫描计算机中的仓库（右上角菜单）。</system:String>
-	<system:String x:Key="Help">✋ 帮助</system:String>
-	<system:String x:Key="Donate">☕ 捐赠</system:String>
-	<system:String x:Key="Follow">🐤 关注 @Waescher</system:String>
-	<system:String x:Key="Star">🌟 在 GitHub 上 为RepoZ 点赞</system:String>
-	<system:String x:Key="PingBack">💙  反馈</system:String>
-	<system:String x:Key="Aggresive">😈  积极</system:String>
-	<system:String x:Key="Adequate">😅  适中</system:String>
-	<system:String x:Key="Discretely">😇  松散</system:String>
-	<system:String x:Key="Off">💤 禁用</system:String>
-	<system:String x:Key="AutoFetch">🕒 自动获取</system:String>
-	<system:String x:Key="ResetIgnoreRules">⛔ 重设忽略规则</system:String>
-	<system:String x:Key="Clear">🗑️ 清理</system:String>
-	<system:String x:Key="ScanComputer">⚡ 扫描计算机</system:String>
-	<system:String x:Key="ScanMac">⚡ Scan mac</system:String>
-	<system:String x:Key="ManageRepos">🛠️ 管理仓库</system:String>
-	<system:String x:Key="GotIt">了解</system:String>
-	<system:String x:Key="Open">打开</system:String>
-	<system:String x:Key="StartWithWindows">随 Windows 启动</system:String>
-	<system:String x:Key="Exit">退出</system:String>
-	<system:String x:Key="NotStartWithWindows">不要随 Windows 启动</system:String>
-	<system:String x:Key="Scanning">⚡ 扫描中 ...</system:String>
-	<system:String x:Key="Open in Windows File Explorer">在资源管理器中打开</system:String>
-	<system:String x:Key="Open in Windows PowerShell">在PowerShell中打开</system:String>
-	<system:String x:Key="Open in Windows Command Prompt">在命令提示符中打开</system:String>
-	<system:String x:Key="Open in Git Bash">在Git Bash中打开</system:String>
-	<system:String x:Key="Open in Finder">Open in Finder</system:String>
-	<system:String x:Key="Open in Terminal">Open in Terminal</system:String>
-	<system:String x:Key="Fetch">获取</system:String>
-	<system:String x:Key="Pull">拉取</system:String>
-	<system:String x:Key="Push">推送</system:String>
-	<system:String x:Key="Checkout">检出</system:String>
-	<system:String x:Key="Ignore">忽略</system:String>
-	<system:String x:Key="Update hint">Version {0} is available.</system:String>
-	<system:String x:Key="Help Detail" xml:space="preserve">
+    <system:String x:Key="Help">帮助</system:String>
+    <system:String x:Key="Donate">捐赠</system:String>
+    <system:String x:Key="Follow">关注 @Waescher</system:String>
+    <system:String x:Key="Star">在 GitHub 上 为RepoZ 点赞</system:String>
+    <system:String x:Key="PingBack">反馈 ♥︎</system:String>
+    <system:String x:Key="Aggresive">积极</system:String>
+    <system:String x:Key="Adequate">适中</system:String>
+    <system:String x:Key="Discretely">松散</system:String>
+    <system:String x:Key="Off">禁用</system:String>
+    <system:String x:Key="AutoFetch">自动获取</system:String>
+    <system:String x:Key="ResetIgnoreRules">重设忽略规则</system:String>
+    <system:String x:Key="Clear">清理</system:String>
+    <system:String x:Key="ScanComputer">扫描计算机</system:String>
+    <system:String x:Key="ScanMac">扫描 mac</system:String>
+    <system:String x:Key="ManageRepos">管理仓库</system:String>
+    <system:String x:Key="GotIt">了解</system:String>
+    <system:String x:Key="Open">打开</system:String>
+    <system:String x:Key="StartWithWindows">随 Windows 启动</system:String>
+    <system:String x:Key="Exit">退出</system:String>
+    <system:String x:Key="NotStartWithWindows">不要随 Windows 启动</system:String>
+    <system:String x:Key="Scanning">扫描中 ...</system:String>
+    <system:String x:Key="Open in Windows File Explorer">在资源管理器中打开</system:String>
+    <system:String x:Key="Open in Windows PowerShell">在 PowerShell 中打开</system:String>
+    <system:String x:Key="Open in Windows Command Prompt">在命令提示符中打开</system:String>
+    <system:String x:Key="Open in Git Bash">在 Git Bash 中打开</system:String>
+    <system:String x:Key="Open in Finder">在 Finder 中打开</system:String>
+    <system:String x:Key="Open in Terminal">在 Terminal 中打开</system:String>
+    <system:String x:Key="Fetch">获取</system:String>
+    <system:String x:Key="Pull">拉取</system:String>
+    <system:String x:Key="Push">推送</system:String>
+    <system:String x:Key="Checkout">检出</system:String>
+    <system:String x:Key="Ignore">忽略</system:String>
+    <system:String x:Key="Update hint">新版本可用: {0}</system:String>
+    <system:String x:Key="Help Detail" xml:space="preserve">
 RepoZ 显示了本地驱动器上的所有Git仓库， 并将按如下格式展示每个仓库的状态：
 
 master  {0}   +1   ~2   -3   |   +4   ~5   -6   {1}7
