Add the magnifier emoji to the search box on windows

--- a/RepoZ.App.Win/MainWindow.xaml
+++ b/RepoZ.App.Win/MainWindow.xaml
@@ -70,7 +70,7 @@
                             </controls:ZTextBox>
 
                             <TextBlock IsHitTestVisible="False"
-								   Text="{DynamicResource Search}"
+								   Text="{DynamicResource SearchWin}"
 								   VerticalAlignment="Center"
 								   FontSize="15"
 								   HorizontalAlignment="Left"
